deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecomm-product-service
  namespace: default
  labels:
    app: ecomm-sample-app-testrca
    service: ecomm-product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecomm-sample-app-testrca
      service: ecomm-product-service
  template:
    metadata:
      labels:
        app: ecomm-sample-app-testrca
        service: ecomm-product-service
    spec:
        - name: ecomm-product-service-containers
          image: public.ecr.aws/cloudaeye/ecomm-product-service
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: ecomm-product-service-svc
  namespace: default
  labels:
    app: ecomm-sample-app-testrca
    service: ecomm-product-service
spec:
  selector:
    app: ecomm-sample-app-testrca
    service: ecomm-product-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
# Nginx Ingress Ctrl Resources for this ingress : https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.4.0/deploy/static/provider/cloud/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecomm-product-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - http:
        paths:
          - path: /sample-app/ecomm(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ecomm-product-service-svc
                port:
                  number: 80
